--- a/package.json
+++ b/package.json
@@ -18,10 +18,8 @@
     "@angular/platform-browser-dynamic": "^21.0.6",
     "@angular/router": "^21.0.6",
     "@tailwindcss/postcss": "^4.1.18",
-    "chart.js": "^4.5.1",
+    "ng2-charts": "^8.0.0",
     "postcss": "^8.5.6",
-    "primeicons": "^7.0.0",
-    "primeng": "^21.0.2",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.18",
     "tslib": "^2.3.0",
